--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^1.2.0",
+    "@nuxt/kit": "^3.11.2",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@tailwindcss/typography": "^0.5.8",
     "nuxt": "3.0.0"
+  },
+  "dependencies": {
+    "vue": "^3.4.23",
+    "vue-router": "^4.3.2"
   }
 }
