--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
+    "@vueuse/core": "^11.3.0",
+    "@vueuse/nuxt": "^11.3.0",
     "vue": "^3.4.23",
     "vue-router": "^4.3.2"
   }
